# SparkMyCV

./: README.md
backend/: build_schema.py  main.py  pyproject.toml  requirements.txt  schema.json
backend/app/: api.py  build_schema.py  cvFormatter.py  cv_improver.py  cv_improver_openai.py  openAI.py  validate_schema.py  webscraper.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: APIProvider.tsx  App.tsx  index.css  schema.json
frontend/src/api/: api.ts  base.ts  common.ts  configuration.ts  index.ts
frontend/src/components/: Result.tsx  Upload.tsx
frontend/src/components/renderer/: CVEditRenderer.tsx  CVRenderer.tsx
