[tool.pdm]

[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Heng", email = "31088159+shiukaheng@users.noreply.github.com"},
]
dependencies = [
    "fastapi>=0.92.0",
    "uvicorn>=0.20.0",
    "mechanicalsoup>=1.2.0",
    "openai>=0.27.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.0",
    "cloudscraper>=1.2.69",
    "beautifulsoup4>=4.11.2",
    "python-multipart>=0.0.6",
    "jsonschema>=4.17.3",
    "genson>=1.2.2"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
build_schema = "pdm run python ./app/build_schema.py"
dev = "pdm run python ./main.py"
